프밍실습시작
기본템플릿 생성

--- a/Programming/Programming/Programming.vcxproj
+++ b/Programming/Programming/Programming.vcxproj
@@ -64,7 +64,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="startSource.cpp" />
+    <Text Include="myfile.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="0921_programming_quiz.cpp" />
+    <ClCompile Include="ReadFile.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
